--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -38,6 +38,7 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
+  margin: 0.8rem 0rem;
   padding: 0.4em 0.8em;
   font-size: 1em;
   font-weight: 500;
