--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -33,6 +33,7 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  padding-left: 1rem;
 }
 
 button {
@@ -78,7 +79,7 @@ section {
   background-color: #111;
   padding: 1rem;
   margin: 2rem auto;
-  width: min(80%, 90rem);
+  width: min(80%, 60rem);
   border-radius: 8px;
 }
 
