--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -33,7 +33,7 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-  padding-left: 1rem;
+  padding-left: 1em;
 }
 
 button {
@@ -81,6 +81,10 @@ section {
   margin: 2rem auto;
   width: min(80%, 60rem);
   border-radius: 8px;
+}
+
+p {
+  text-indent: 2em
 }
 
 @media (prefers-color-scheme: light) {
